WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78961
[Texmap] Layers and tiles appear to have missing pixels in their right/bottom borders
https://bugs.webkit.org/show_bug.cgi?id=78961
Summary
[Texmap] Layers and tiles appear to have missing pixels in their right/bottom...
Noam Rosenthal
Reported
2012-02-18 05:07:16 PST
[Texmap] Layers and tiles appear to have missing pixels in their right/bottom borders
Attachments
Patch
(1.91 KB, patch)
2012-02-20 10:09 PST
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.01 KB, patch)
2012-02-20 15:28 PST
,
Noam Rosenthal
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2012-02-20 15:47 PST
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-02-20 10:09:16 PST
Created
attachment 127830
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-02-20 13:01:50 PST
Comment on
attachment 127830
[details]
Patch I trust you on that one :-) but can you add a comment?
Noam Rosenthal
Comment 3
2012-02-20 15:28:29 PST
Created
attachment 127857
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-02-20 15:30:40 PST
Comment on
attachment 127857
[details]
Patch for landing Rejecting
attachment 127857
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11547416
Noam Rosenthal
Comment 5
2012-02-20 15:47:12 PST
Created
attachment 127865
[details]
Patch
WebKit Review Bot
Comment 6
2012-02-20 17:15:04 PST
Comment on
attachment 127865
[details]
Patch Clearing flags on attachment: 127865 Committed
r108273
: <
http://trac.webkit.org/changeset/108273
>
WebKit Review Bot
Comment 7
2012-02-20 17:15:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug